<resources>
    <string name="app_name">TodoApp</string>
    <string name="Welcome_Message">Welcome to Shehan todo list</string>
    <string name="add_symbol">+</string>
    <string name="Welcome_to_todo_list">Add a Todo Item</string>
    <string name="note_name">Enter Note Name</string>
    <string name="Urgent">Urgent?</string>
    <string name="Save">SAVE</string>
    <string name="Cancel">Cancel</string>
    <string name="item_name_text">Item Name</string>
    <string name="item_urgency_text">Item Urgency</string>
    <string name="Edit_item_Message">Edit a Todo Item</string>
</resources>